# THU-Graphic

./: README.md
code/: CMakeLists.txt  run_all.sh
code/image/: glass.ppm  glass_normal.ppm  stonetiles.ppm  stonetiles_normal.ppm  wallstone.ppm  wallstone_normal.ppm
code/include/: bound.hpp  camera.hpp  curve.hpp  group.hpp  hit.hpp  image.hpp  kdtree.hpp  light.hpp  material.hpp  mesh.hpp  object3d.hpp  plane.hpp  ppmtree.hpp  ray.hpp  rectangle.hpp  revsurface.hpp  scene_parser.hpp  smoothtriangle.hpp  sphere.hpp  transform.hpp  triangle.hpp
code/src/: image.cpp  main.cpp  main1.cpp  mesh.cpp  scene_parser.cpp
code/testcases/: A.txt  A1.txt  C.txt  earth.txt  metal.txt  test.txt  twoSphere.txt  vase.txt
